--- a/ccms_pro/www/html/now/onePowerModSinglenow.html
+++ b/ccms_pro/www/html/now/onePowerModSinglenow.html
@@ -23,9 +23,89 @@
 	function deal_data3(data){
 		deal3(data);
 	};
-	function deal_data4(data){
-		deal4(data);
+	function deal_data4(data1, data2, data3, data4, data5){
+		change_state(data1, data2, data3, data4, data5);
 	};
+
+    function change_state(statedata1, statedata2, statedata3, statedata4, statedata5){
+        var state1 = document.getElementById("1connected");
+        var state2 = document.getElementById("2connected");
+        var state3 = document.getElementById("3connected");
+        var state4 = document.getElementById("4connected");
+        var state5 = document.getElementById("5connected");
+        var state6 = document.getElementById("6connected");
+        var state7 = document.getElementById("7connected");
+        var state77 = document.getElementById("77connected");
+        var state8 = document.getElementById("8connected");
+        var state9 = document.getElementById("9connected");
+
+        var error1_1 = document.getElementById("1_1error_connected");
+        var error1_2 = document.getElementById("1_2error_connected");
+        var error1_3 = document.getElementById("1_3error_connected");
+        var error1_4 = document.getElementById("1_4error_connected");
+        var error1_5 = document.getElementById("1_5error_connected");
+        var error1_6 = document.getElementById("1_6error_connected");
+        var error1_7 = document.getElementById("1_7error_connected");
+        var error1_8 = document.getElementById("1_8error_connected");
+
+        var error2_1 = document.getElementById("2_1error_connected");
+        var error2_2 = document.getElementById("2_2error_connected");
+        var error2_3 = document.getElementById("2_3error_connected");
+        var error2_4 = document.getElementById("2_4error_connected");
+        var error2_5 = document.getElementById("2_5error_connected");
+        var error2_6 = document.getElementById("2_6error_connected");
+        var error2_7 = document.getElementById("2_7error_connected");
+        var error2_8 = document.getElementById("2_8error_connected");
+
+        var error3_1 = document.getElementById("3_1error_connected");
+        var error3_2 = document.getElementById("3_2error_connected");
+        var error3_3 = document.getElementById("3_3error_connected");
+        var error3_4 = document.getElementById("3_4error_connected");
+        var error3_5 = document.getElementById("3_5error_connected");
+        var error3_6 = document.getElementById("3_6error_connected");
+        var error3_7 = document.getElementById("3_7error_connected");
+        var error3_8 = document.getElementById("3_8error_connected");
+
+        state1.src = (statedata1[0] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        state2.src = (statedata1[1] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        state3.src = (statedata1[2] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        state4.src = (statedata1[3] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        state5.src = (statedata1[4] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        state6.src = (statedata1[5] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        state7.src = (statedata1[6] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        state77.src = (statedata1[7] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+
+        state8.src = (statedata2[0] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        state9.src = (statedata2[4] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+
+        error1_1.src = (statedata3[0] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error1_2.src = (statedata3[1] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error1_3.src = (statedata3[2] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error1_4.src = (statedata3[3] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error1_5.src = (statedata3[4] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error1_6.src = (statedata3[5] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error1_7.src = (statedata3[6] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error1_8.src = (statedata3[7] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+
+        error2_1.src = (statedata4[0] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error2_2.src = (statedata4[1] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error2_3.src = (statedata4[2] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error2_4.src = (statedata4[3] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error2_5.src = (statedata4[4] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error2_6.src = (statedata4[5] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error2_7.src = (statedata4[6] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error2_8.src = (statedata4[7] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+
+        error3_1.src = (statedata5[0] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error3_2.src = (statedata5[1] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error3_3.src = (statedata5[2] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error3_4.src = (statedata5[3] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error3_5.src = (statedata5[4] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error3_6.src = (statedata5[5] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error3_7.src = (statedata5[6] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+        error3_8.src = (statedata5[7] == 1 ? "../../images/icons/run.png" : "../../images/icons/error.png");
+
+    }
 	
     </script>
 <style>
@@ -102,31 +182,33 @@
             <!--7个均衡状态-->
             <!--灰色——连接状态；绿色——运行；红色——故障-->
             <!--1-->
-            <img id="1connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:15%">
+            <img id="1connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:5%">
             <!--<img id="1run" src="../../images/icons/run.png" style="position:relative;top:0px;left:15%">
             <img id="1error" src="../../images/icons/error.png" style="position:relative;top:0px;left:15%">-->
             <!--2-->
-            <img id="2connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:25%">
+            <img id="2connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:15%">
             <!--<img id="2run" src="../../images/icons/run.png" style="position:relative;top:0px;left:25%">
             <img id="2error" src="../../images/icons/error.png" style="position:relative;top:0px;left:25%">-->
             <!--3-->
-            <img id="3connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:35%">
+            <img id="3connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:25%">
             <!--<img id="3run" src="../../images/icons/run.png" style="position:relative;top:0px;left:35%">
             <img id="3error" src="../../images/icons/error.png" style="position:relative;top:0px;left:35%">-->
             <!--4-->
-            <img id="4connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:45%">
+            <img id="4connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:35%">
             <!--<img id="4run" src="../../images/icons/run.png" style="position:relative;top:0px;left:45%">
             <img id="4error" src="../../images/icons/error.png" style="position:relative;top:0px;left:45%">-->
             <!--5-->
-            <img id="5connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:55%">
+            <img id="5connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:45%">
             <!--<img id="5run" src="../../images/icons/run.png" style="position:relative;top:0px;left:55%">
             <img id="5error" src="../../images/icons/error.png" style="position:relative;top:0px;left:55%">-->
             <!--6-->
-            <img id="6connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:65%">
+            <img id="6connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:55%">
            <!-- <img id="6run" src="../../images/icons/run.png" style="position:relative;top:0px;left:65%">
             <img id="6error" src="../../images/icons/error.png" style="position:relative;top:0px;left:65%">-->
             <!--7-->
-            <img id="7connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:75%">
+            <img id="7connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:65%">
+
+            <img id="77connected" src="../../images/icons/connect.png" style="position:relative;top:0px;left:75%">
            <!-- <img id="7run" src="../../images/icons/run.png" style="position:relative;top:0px;left:75%">
             <img id="7error" src="../../images/icons/error.png" style="position:relative;top:0px;left:75%">-->
 			
