--- a/ccms_pro/www/index.html
+++ b/ccms_pro/www/index.html
@@ -47,7 +47,7 @@
 
   // Create a connection to the rosbridge WebSocket server.
   //ros.connect('ws://localhost:8888');
-  ros.connect('ws://222.241.204.172:8888');
+  ros.connect('ws://222.241.204.92:8888');
   
   var send_data = new ROSLIB.Topic({
     ros : ros,
@@ -101,9 +101,18 @@
   });
 	d4_data.subscribe(function(message) {
 			console.log('in d4_data');
-			data = message.data;
-			console.log('data: ' + data);
-			child.window.deal_data4(data);
+			// data = message.voltage_equal_state;
+			// console.log('data: ' + voltage_equal_state);
+			console.log('1');
+			child.window.error2(message.undervolt_warning);
+			console.log('2');
+			child.window.deal_data4(message.voltage_equal_state,
+                              message.Other_data,
+                              message.resistance_abnormality,
+                              message.undervolt_alarm,
+                              message.low_volt_alarm);
+			console.log('3');
+		
 	});
 
 	var d6_data = new ROSLIB.Topic({
@@ -117,12 +126,13 @@
 				   message.Energy_Storage_Voltage,                                  
                    message.Energy_Storage_Current,                      
                    message.Energy_Storage_Temperature);
-
+	console.log("message.other " + message.otherdata);
     // //data1.getting();
+     child.window.deal_data6(data6, message.Fandata, message.otherdata, message.FanAccident, message.Fandata);
 	 
-     child.window.deal_data6(data6);
-	 child.window.change_pic_fan(message.Fandata);
-	 child.window.change_pic_power(message.otherdata);
+     //child.window.change_pic_fan(message.Fandata);
+     //child.window.change_pic_power(message.otherdata);
+     //child.window.change_fan_error(message.FanAccident, message.Fandata);
 	});
 
 	var d1_data = new ROSLIB.Topic({
@@ -132,12 +142,18 @@
   });
   d1_data.subscribe(function(message) {
 			console.log('in d1_data');
+	  console.log("message1 " + message.module_overvolt_abnormal);
+	  console.log("message2 " + message.module_capacity_abnormal);
+	  console.log("message3 " + message.other_data_bit);
+	  console.log("message4 " + message.module_overvolt_warming);
       data1.setting(message.id,
 					message.Module_Voltage,                                  
                    message.Module_Capacitance_Temperature);
-
+	//child.window.error1(message.module_overvolt_abnormal, message.module_capacity_abnormal, message.other_data_bit, message.module_overvolt_warming);
     // //data1.getting();
+	console.log("deal data1");
      child.window.deal_data1(data1);
+     
   });
 
   var d5_data = new ROSLIB.Topic({
@@ -153,7 +169,7 @@
                   message.Moduel_Average_Voltage,
                   message.Module_Voltage_Threshold,
                   message.Minimum_Module_Voltage)
-	console.log("data5: " + data5.Moduel_Average_Voltage);
+	  console.log("data5: " + data5.Moduel_Average_Voltage);
     child.window.deal_data5(data5);
   });
 
