--- a/ccms_pro/www/html/history/onePowerHistory.html
+++ b/ccms_pro/www/html/history/onePowerHistory.html
@@ -318,7 +318,7 @@
 
                VchartOption.xAxis.data = evt.date;
 
-               VchartOption.series[0].data = evt.data;
+               VchartOption.series[0].data = evt.data[0];
                //VchartOption.series[1].data = CseriesData
                //VchartOption.series[2].data = TseriesData
                console.log("加载的data是" + evt.data)
